Html overflow bug fixed

--- a/index.css
+++ b/index.css
@@ -16,8 +16,8 @@
 
 html {
   scroll-behavior: smooth;
-  overflow-x: hidden;
-  width: 100vw;
+  overflow-x: hidden !important;
+  width: 100vw !important;
 }
 
 body {
